fix overflow for optsView (#925)

--- a/src/adapters/github.less
+++ b/src/adapters/github.less
@@ -295,6 +295,10 @@
         padding-left: 8px;
       }
       .octotree-view-body {
+        height: 100%;
+        overflow-x: hidden;
+        overflow-y: auto;
+
         input[type="checkbox"], input[type="radio"] {
           vertical-align: middle;
         }
